--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,73 @@
 :root{
     box-sizing: border-box;
-    
+    font-size: 1em;
+    font-family: 'Roboto Slab', serif;
+}
+
+body{
+    width:95vw;
+    height: 95vh;
+    margin:1em auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    font-size: 4em;
+}
+h2{
+    font-size: 1em;
+}
+
+main{
+    width: 95%;
+    height: 70%;
+    margin:1em 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.bookShelf,.lectern{
+    width: 45%;
+    height: 100%;
+    border:0.125rem solid gold;
+}
+.bookShelf{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+.lectern{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
+    text-align: center;
+    font-size: 3em;
+}
+#previous,#next{
+    top:50%;
+    position: absolute;
+}
+#previous{
+    left: 0;
+}
+#next{
+    right:0;
+}
+.book{
+    text-align: center;
+    padding: 0 25%;
+    writing-mode: vertical-rl;
+    text-orientation:mixed;
+    outline: black solid 0.0625rem;
+}
+.read{
+    background-color: green;
+}
+.notread{
+    background-color: red;
 }
