Added Base Features

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ main{
     justify-content: space-evenly;
 }
 
-.bookShelf,.lectern{
+.bookShelf,.display,.input{
     width: 45%;
     height: 100%;
     border:0.125rem solid gold;
@@ -37,16 +37,35 @@ main{
 .bookShelf{
     position: relative;
     display: grid;
+    grid-auto-flow: column;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: repeat(3,1fr);
 }
-.lectern{
+.display{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
     text-align: center;
     font-size: 3em;
+}
+.input{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-content: center;
+    text-align: center;
+    font-size: 2em;
+}
+button{
+    opacity: 0.3;
+}
+button:hover{
+    opacity: 0.7;
+}
+button:active{
+    opacity: 1;
 }
 #previous,#next{
     top:50%;
@@ -57,6 +76,16 @@ main{
 }
 #next{
     right:0;
+}
+#add,#remove{
+    right: 0;
+    position: absolute;
+}
+#add{
+    top:0;
+}
+#remove{
+    bottom: 0;
 }
 .book{
     text-align: center;
@@ -70,4 +99,7 @@ main{
 }
 .notread{
     background-color: red;
+}
+.hide{
+    display: none;
 }
