--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,15 @@
     box-sizing: border-box;
     font-size: 1em;
     font-family: 'Roboto Slab', serif;
+    --color-primary:#a52a2a;
+    --color-primaryDark:#862323;
+    --color-compliment:#D4A0A7;
+    --color-accentOne:#99C24D;
+    --color-accentTwo:#1D3461;
+    --color-highlight:#0094C6;
+    --color-gray:#808080;
+    --color-black:#000000;
+    --color-white:#FFFFFF;
 }
 
 body{
@@ -11,7 +20,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image:linear-gradient(0deg,#a52a2a 0% 5%, gray 5% 12%,black 12% 13%, #D4A0A7 12% 98%,#a52a2a 98% 100% );
+    background-image:linear-gradient(0deg,
+                                   var(--color-primary) 0% 5%, 
+                                   var(--color-gray) 5% 12%,
+                                   var(--color-black) 12% 13%, 
+                                   var(--color-compliment) 12% 98%,
+                                   var(--color-primary) 98% 100% );
     background-size: cover;
 }
 
@@ -35,7 +49,7 @@ main{
     width: 45%;
     height: 97%;
     padding: 0.5%;
-    border:4px solid black; 
+    border:4px solid var(--color-black); 
 }
 .bookShelf{
     display: grid;
@@ -43,12 +57,32 @@ main{
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: repeat(3,1fr);
     gap: 1%;
-    background-image:linear-gradient(0deg,#862323 0% 1%, #a52a2a 1% 33%,
-                                          #862323 33% 34%,#a52a2a 34% 66%,
-                                          #862323 66% 67%,#a52a2a 67% 99%,
-                                          #862323 99% 100%);
+    background-image:linear-gradient(0deg,var(--color-primaryDark) 0% 1%, var(--color-primary) 1% 33%,
+                                          var(--color-primaryDark) 33% 34%, var(--color-primary) 34% 66%,
+                                          var(--color-primaryDark) 66% 67%,var(--color-primary) 67% 99%,
+                                          var(--color-primaryDark) 99% 100%);
 }
-.display{
+.book{
+    text-align: center;
+    padding: 0 25%;
+    writing-mode: vertical-rl;
+    text-orientation:mixed;
+    font-size: 1.25em;
+    outline: var(--color-black) solid 0.0625rem;
+}
+.book:hover{
+    outline: var(--color-highlight) solid 0.25rem;
+}
+.read{
+    color: var(--color-black);
+    background-color: var(--color-accentOne);
+}
+.notread{
+    color: var(--color-white);
+    background-color: var(--color-accentTwo);
+}
+
+.display,.input{
     position: relative;
     display: flex;
     flex-direction: column;
@@ -56,21 +90,26 @@ main{
     align-content: center;
     text-align: start;
     font-size: 3em;
-    background-color: #a52a2a;
-}
-.input{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-content: center;
-    text-align: start;
-    font-size: 3em;
     flex-wrap: nowrap;
-    background-color: #a52a2a;
+    background-color: var(--color-primary);
+}
+#title,#author,#pages{
+    background-color: var(--color-compliment);
+    outline:var(--color-black) solid 0.0625em;
 }
 input{
-    background-color: #D4A0A7;
+    background-color: var(--color-compliment);
     font-size: 0.75em;
+}
+#readDisplay{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;    
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+    outline: var(--color-black) solid 0.0625em;
 }
 button{
     font-size: 1em;
@@ -78,9 +117,6 @@ button{
     background-color: transparent;
     border:none;
     cursor: pointer;
-}
-#add:hover,#remove:hover{
-    text-shadow:0.0625em 0.0625em 0 #0094C6;
 }
 #add,#remove{
     right: 0;
@@ -92,55 +128,26 @@ button{
 #remove{
     bottom: 0;
 }
-#submit{
-    opacity: 1;
-    max-width:50%;
-    font-size: 1em;
-}
-.book{
-    text-align: center;
-    padding: 0 25%;
-    writing-mode: vertical-rl;
-    text-orientation:mixed;
-    font-size: 1.25em;
-    outline: black solid 0.0625rem;
-}
-.book:hover{
-    outline: #0094C6 solid 0.25rem;
-}
-#title,#author,#pages{
-    background-color: #D4A0A7;
-    outline:black solid 0.0625em;
-}
-.read{
-    color: black;
-    background-color: #99C24D;
-}
-.notread{
-    color: white;
-    background-color: #1D3461;
-}
-.hide{
-    display: none;
-}
-#readDisplay{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;    
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    outline: black solid 0.0625em;
-}
-.material-icons{
-    font-size: 48px;
-    padding-left: 5%;
-    cursor: pointer;
-    border-left: 0.0625em solid black ;
+#add:hover,#remove:hover{
+    text-shadow:0.0625em 0.0625em 0 var(--color-highlight);
 }
 .inputButtons{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+#submit{
+    opacity: 1;
+    max-width:50%;
+    font-size: 1em;
+}
+.material-icons{
+    font-size: 48px;
+    padding-left: 5%;
+    cursor: pointer;
+    border-left: 0.0625em solid var(--color-black) ;
+}
+
+.hide{
+    display: none;
 }
